# Filing-Analyst

./: .env.example  .gitignore  Makefile  README.md  architecture.md  chunker.py  client.py  config.py  dense.py  docker-compose.yml  loader.py  metrics.py  progress.md  prompt.py  pyproject.toml  test_chunker.py
.cache/: chunks.pkl  embeddings.npy
data/corpus/: FILINGS_METADATA.csv
data/corpus/EXTRACTED_FILINGS/10-K/: 789019_10K_2019_0001564590-19-027952.json  789019_10K_2020_0001564590-20-034944.json  789019_10K_2021_0001564590-21-039151.json  789019_10K_2022_0001564590-22-026876.json  789019_10K_2023_0000950170-23-035122.json  789019_10K_2024_0000950170-24-087843.json  789019_10K_2025_0000950170-25-100235.json
data/qa/: gold.jsonl
scripts/: ask.py  build_index.py  eval_faithfulness.py  eval_retrieval.py  load_to_postgres.py  schema.sql
src/rag/: config.py
src/rag/embed/: embedder.py
src/rag/eval/: judge.py  metrics.py
src/rag/generate/: client.py  prompt.py
src/rag/ingest/: chunker.py  loader.py
src/rag/retrieve/: dense.py  hybrid.py  keyword.py  pg_dense.py
src/rag/store/: db.py
tests/: test_chunker.py
