[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag"]

[project]
name = "rag-capstone"
version = "0.1.0"
description = "End-to-end RAG with a real evaluation harness. No orchestration frameworks."
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers>=3.0",
    "numpy>=1.26",
    "anthropic>=0.40",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "pypdf>=4.0",
]

[project.optional-dependencies]
week2 = [
    "rank-bm25>=0.2.2",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
]
dev = ["ruff>=0.6", "pytest>=8.0"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
